# Paper-Forge-MacApp

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.build/macos/module-cache/1663R2CBX9G1W/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Cocoa-1MK6YYY84V08M.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  (+45 more)
config/: README.md  defaults.yaml
docs/architecture/: README.md  architecture-decisions.md  phase-1-launch-scope.md  release-readiness.md
outputs/: Paper Forge-0.1.0.dmg
packaging/macos/: README.md  app-metadata.env  build_native_app.sh  build_release_dmg.sh  generate_app_icon.sh  generate_app_icon.swift  notarize_release.sh  validate_release.sh
resources/: AppIcon.icns  README.md
scripts/: README.md
src/pdfsuite/: __init__.py
src/pdfsuite/app/: AppContainer.swift  AppState.swift  ContentView.swift  PaperForgeApp.swift
src/pdfsuite/core/: CancellationToken.swift  DomainModels.swift  ModuleContracts.swift  __init__.py
src/pdfsuite/modules/: ModuleManifest.swift  ModuleRegistry.swift  __init__.py
src/pdfsuite/services/: FileImporting.swift  JobStoring.swift  ModuleRunning.swift  ProgressPublishing.swift  SettingsStoring.swift
tests/: Phase1SmokeTests.swift  README.md
work/: build_mac_app.py  pdf_to_image_app.py
(+64 files in other folders)
